[Feature #3] Adjustments and model change
